--- a/accounts/static/sass/profile.sass
+++ b/accounts/static/sass/profile.sass
@@ -7,5 +7,18 @@ h1
 h2
     margin-top: 30px
 
+h3
+    margin-top: 10px
+
+p
+    margin-bottom: .5rem
+
 .job
     margin-left: 40px
+
+.fa-sync-alt
+    transition: .3s
+
+    padding-left: 3px
+    &:hover
+        transform: rotate(180deg)
