--- a/trade/templates/trade/complete.html
+++ b/trade/templates/trade/complete.html
@@ -3,7 +3,7 @@
 {% load sass_tags %}
 {% load fadderanmalan_components %}
 
-{% block title %}Bytesförfrågan från {{ sender.username }} - {% endblock title %}
+{% block title %}Bytesförfrågan från {{ other.username }} - {% endblock title %}
 
 {% block head %}
     <link rel="stylesheet" href="{% sass_src 'sass/trade_complete.sass' %}">
@@ -11,7 +11,7 @@
 {% endblock head %}
 
 {% block content %}
-    <h1>Bytesförfrågan från {{ sender.username }}</h1>
+    {% block header %}<h1>Bytesförfrågan från {{ other.username }}</h1>{% endblock header %}
 
     <div class="trade">
         <div class="trade-sent">
@@ -36,9 +36,12 @@
         </div>
     </div>
 
-    <form action="{% url 'trade:complete' sender_username=sender.username %}" method="post">
+
+    <form action="{% url 'trade:change' other.username %}" method="post">
         {% csrf_token %}
-        <button type="submit" value="false" name="accept" class="btn btn-primary">Avslå bytet</button>
-        <button type="submit" value="true" name="accept" class="btn btn-primary">Acceptera bytet</button>
+        {% block actions %}
+            <button type="submit" name="deny" class="btn btn-primary">Avslå bytet</button>
+            <button type="submit" name="accept" class="btn btn-primary">Acceptera bytet</button>
+        {% endblock actions %}
     </form>
 {% endblock content %}
