Restyle trade:start to use job_component

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{% static 'hamburgers/hamburgers.css' %}">
 
     <link rel="stylesheet" href="{% sass_src 'sass/base.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/form.sass' %}">
 
     <link rel="icon" type="image/x-icon" href="{% static '/favicon.ico' %}"/>
 
