--- a/fadderjobb/static/sass/mobile/m_form.sass
+++ b/fadderjobb/static/sass/mobile/m_form.sass
@@ -25,3 +25,10 @@ body.mobile
 
         .errorlist
             text-align: center
+
+        button
+            font-size: .8em
+            padding: 25px 40px
+
+            display: block
+            margin: 0 auto
