--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -17,10 +17,17 @@
     {% endif %}
     <div class="header">
         <h1>
-            <a href="{% url 'trade:start' user.username %}" class="nounderline">
-                <i class="fas fa-sync-alt" data-toggle="tooltip"
-                   data-placement="bottom" title="Byt jobb"></i>
-            </a>
+            {% if not trade %}
+                <a href="{% url 'trade:start' user.username %}" class="nounderline">
+                    <i class="fas fa-sync-alt" data-toggle="tooltip"
+                       data-placement="bottom" title="Byt jobb"></i>
+                </a>
+            {% else %}
+                <a href="{% url 'trade:see' user.username %}" class="nounderline">
+                    <i class="fas fa-sync-alt" data-toggle="tooltip"
+                       data-placement="bottom" title="Gå till aktivt byte"></i>
+                </a>
+            {% endif %}
             {{ user.username }} - {{ user.points }}<span class="lowercase">p</span>
         </h1>
     </div>
