--- a/trade/templates/trade/sent.html
+++ b/trade/templates/trade/sent.html
@@ -4,6 +4,9 @@
 
 {% block header %}<h1>Bytesförfrågan till {{ other.username }}</h1>{% endblock header %}
 
+{% block requested_title %}Deras jobb{% endblock %}
+{% block sent_title %}Dina jobb{% endblock %}
+
 {% block actions %}
     <button type="submit" name="cancel" class="btn btn-primary">Avbryt bytet</button>
 {% endblock actions %}
