Rename jobsignup -> job_list

--- a/fadderanmalan/static/sass/job_list.sass
+++ b/fadderanmalan/static/sass/job_list.sass
@@ -1,5 +1,5 @@
-@import mobile/m_jobsignup
-@import darkmode/d_jobsignup
+@import mobile/m_job_list
+@import darkmode/d_job_list
 
 #filter-container
     display: flex
