--- a/fadderanmalan/templates/components/job.html
+++ b/fadderanmalan/templates/components/job.html
@@ -1,4 +1,4 @@
-<a href="{% url 'fadderanmalan:jobsignup_detail' job.slug %}"
+<a href="{% url 'fadderanmalan:job_details' job.slug %}"
    class="job {{ job.full_status }} {{ job.locked_status }} nounderline">
     <div class="job-title">
         <h3>
