--- a/fadderanmalan/templates/job_details.html
+++ b/fadderanmalan/templates/job_details.html
@@ -8,7 +8,7 @@
 
 {% block head %}
     <!--suppress HtmlUnknownTarget -->
-    <link rel="stylesheet" href="{% sass_src 'sass/jobdetails.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/job_details.sass' %}">
     <link rel="stylesheet" href="{% sass_src 'sass/form.sass' %}">
     <link rel="stylesheet" href="{% sass_src 'sass/components/userlink.sass' %}">
 {% endblock head %}
