Move index-view to root app and prefix fadderanmalan with job/

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
 {% endif %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand nounderline" href="/">Fadderjobb</a>
+    <a class="navbar-brand nounderline" href="{% url 'index' %}">Fadderjobb</a>
     <button class="navbar-toggler hamburger hamburger--collapse" type="button" data-toggle="collapse"
             data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
             aria-label="Toggle navigation">
