--- a/fadderjobb/static/sass/mobile/m_base.sass
+++ b/fadderjobb/static/sass/mobile/m_base.sass
@@ -31,7 +31,10 @@ body.mobile
     h3
         font-size: 1.2em
 
-    h1, h2, h3
+    h4
+        font-size: 1.1em
+
+    h1, h2, h3, h4
         margin-top: 2rem
         margin-bottom: 1rem
 
