--- a/fadderjobb/static/sass/mobile/m_form.sass
+++ b/fadderjobb/static/sass/mobile/m_form.sass
@@ -32,3 +32,7 @@ body.mobile
 
             display: block
             margin: 0 auto
+
+        .helptext
+            display: block
+            text-align: center
