Trades now use Job instead of JobUser + admin can accept trades in /admin

--- a/templates/guide.html
+++ b/templates/guide.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="{% sass_src 'sass/index.sass' %}">
 {% endblock head %}
 
+{% block title %}Guide - {% endblock title %}
+
 {% block content %}
     <h2>Att registrera sig på ett jobb</h2>
     <p>
