--- a/trade/templates/trade/complete.html
+++ b/trade/templates/trade/complete.html
@@ -16,9 +16,9 @@
     <div class="trade">
         <div class="trade-sent">
             <h3>{% block requested_title %}Dina jobb{% endblock %}</h3>
-            {% for job_user in trade.requested.all %}
+            {% for job in trade.requested.all %}
                 <div class="trade-job">
-                    {% job_component job_user.job %}
+                    {% job_component job %}
                 </div>
             {% empty %}
                 <i>Inga jobb</i>
@@ -26,9 +26,9 @@
         </div>
         <div class="trade-received">
             <h3>{% block sent_title %}Deras jobb{% endblock %}</h3>
-            {% for job_user in trade.sent.all %}
+            {% for job in trade.sent.all %}
                 <div class="trade-job">
-                    {% job_component job_user.job %}
+                    {% job_component job %}
                 </div>
             {% empty %}
                 <i>Inga jobb</i>
