--- a/trade/templates/trade/start.html
+++ b/trade/templates/trade/start.html
@@ -3,7 +3,7 @@
 {% load sass_tags %}
 {% load fadderanmalan_components %}
 
-{% block title %}Byt jobb med {{ target.username }} - {% endblock title %}
+{% block title %}Byt jobb med {{ target }} - {% endblock title %}
 
 {% block head %}
     <link rel="stylesheet" href="{% sass_src 'sass/trade_start.sass' %}">
@@ -11,9 +11,9 @@
 {% endblock head %}
 
 {% block content %}
-    <h1>Byt jobb med {{ receiver.username }}</h1>
+    <h1>Byt jobb med {{ receiver }}</h1>
 
-    <p style="width: 700px; max-width: 95vw;">
+    <p>
         Observera att bytet kommer att tas bort automatiskt om du avregistrerar dig från något jobb du erbjuder
         eller registrerar dig på något du förfrågar, alternativ om den du skickar förfrågan till gör det samma.
     </p>
@@ -29,10 +29,10 @@
 
         {% for field in trade_form %}
             <h2>{{ field.label }}</h2>
-            {% for job_user in field.field.choices %}
+            {% for job in field.field.choices %}
                 <div class="trade-job">
-                    <input type="checkbox" name="{{ field.name }}" value="{{ job_user.id }}">
-                    {% job_component job_user.job %}
+                    <input type="checkbox" name="{{ field.name }}" value="{{ job.id }}">
+                    {% job_component job %}
                 </div>
             {% empty %}
                 <p><i>Finns inga jobb att erbjuda.</i></p>
