--- a/templates/guide.html
+++ b/templates/guide.html
@@ -30,8 +30,9 @@
         Att byta jobb mellan två faddrar har aldrig varit simplare! Systemet har tagit inspiration från trade-offers i
         Steam, och fungerar ungefär på samma sätt. D.v.s. du kan skicka samma jobb i flera olika bytesförfrågningar, men
         när något av dem accepteras försvinner de andra. Du kan också avregistrera dig på jobb du har skickat i
-        förfrågningar, vilket också kommer ta bort bytesförfrågan. Samma sak gäller registrering på jobb som du har
-        blivit förfrågad om; om du registrerar dig på ett sånt kommer bytesförfrågan att tas bort automatiskt.
+        förfrågningar, vilket också kommer ta bort bytesförfrågan. Samma sak gäller den du skickar förfrågan till:
+        om den andra parten antingen registrerar sig på något jobb du erbjuder eller avregistrerar sig från något jobb
+        du vill ha så kommer bytesförfrågan att tas bort automatiskt.
     </p>
 
     <h4>Jobbyten och köplatser</h4>
