--- a/fadderjobb/static/sass/mobile/m_base.sass
+++ b/fadderjobb/static/sass/mobile/m_base.sass
@@ -59,3 +59,10 @@ body.mobile
     a
         &:before
             height: 5px
+
+    button:not(.navbar-toggler)
+        font-size: .8em
+        padding: 25px 40px
+
+        display: block
+        margin: 0 auto
