--- a/accounts/static/sass/profile.sass
+++ b/accounts/static/sass/profile.sass
@@ -22,3 +22,7 @@ p
     padding-left: 3px
     &:hover
         transform: rotate(180deg)
+
+#webpush-subscribe-button
+    display: block
+    margin-bottom: 20px
