Major refactor of jobregistration for better readability

--- a/fadderanmalan/templates/components/job.html
+++ b/fadderanmalan/templates/components/job.html
@@ -33,5 +33,5 @@
             {{ job.users.count }}/{{ job.slots }} - {{ job.points }}p
         </div>
     </div>
-    <div class="job-body">{{ job.short_desc }}</div>
+    <div class="job-body"><strong>{{ job.date|date:"d/m" }}</strong> - {{ job.short_desc }}</div>
 </a>
