Fix visual bug with topchart counter detaching from user component

--- a/topchart/static/sass/topchart.sass
+++ b/topchart/static/sass/topchart.sass
@@ -20,6 +20,9 @@
     font-weight: bold
 
     display: inline-block
+    position: relative
+
+    right: -4px
 
     border: 2px solid black
     border-right: none
