--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -14,47 +14,55 @@
 
 
 {% block content %}
-    <div class="content-extra">
-        <div class="module module-core">
-            <table>
-                <caption>
-                    Core
-                </caption>
-                <tbody>
-                <tr>
-                    <th scope="row"><a href="{% url 'admin:constance_config_changelist' %}">Project configuration</a></th>
-                    <td></td>
-                    <td><a href="{% url 'admin:constance_config_changelist' %}" class="changelink">Change</a></td>
-                </tr>
-                <tr>
-                    <th scope="row"><a href="{% url 'admin:fadderanmalan_job_changelist' %}">Jobs</a></th>
-                    <td><a href="{% url 'admin:fadderanmalan_job_add' %}" class="addlink">Add</a></td>
-                    <td><a href="{% url 'admin:fadderanmalan_job_changelist' %}" class="changelink">Change</a></td>
-                </tr>
-                <tr>
-                    <th scope="row"><a href="{% url 'admin:accounts_user_changelist' %}">Users</a></th>
-                    <td><a href="{% url 'admin:accounts_user_add' %}" class="addlink">Add</a></td>
-                    <td><a href="{% url 'admin:accounts_user_changelist' %}" class="changelink">Change</a></td>
-                </tr>
-                <tr>
-                    <th scope="row"><a href="{% url 'admin:fadderanmalan_type_changelist' %}">Types</a></th>
-                    <td><a href="{% url 'admin:fadderanmalan_type_add' %}" class="addlink">Add</a></td>
-                    <td><a href="{% url 'admin:fadderanmalan_type_changelist' %}" class="changelink">Change</a></td>
-                </tr>
-                <tr>
-                    <th scope="row"><a href="{% url 'admin:fadderanmalan_equipment_changelist' %}">Equipments</a></th>
-                    <td><a href="{% url 'admin:fadderanmalan_equipment_add' %}" class="addlink">Add</a></td>
-                    <td><a href="{% url 'admin:fadderanmalan_equipment_changelist' %}" class="changelink">Change</a></td>
-                </tr>
-                <tr>
-                    <th scope="row"><a href="{% url 'admin:fadderanmalan_equipmentownership_changelist' %}">Equipment ownerships</a></th>
-                    <td><a href="{% url 'admin:fadderanmalan_equipmentownership_add' %}" class="addlink">Add</a></td>
-                    <td><a href="{% url 'admin:fadderanmalan_equipmentownership_changelist' %}" class="changelink">Change</a></td>
-                </tr>
-                </tbody>
-            </table>
+    {% if request.user.is_superuser %}
+        <div class="content-extra">
+            <div class="module module-core">
+                <table>
+                    <caption>
+                        Core
+                    </caption>
+                    <tbody>
+                    <tr>
+                        <th scope="row"><a href="{% url 'admin:constance_config_changelist' %}">Project
+                            configuration</a></th>
+                        <td></td>
+                        <td><a href="{% url 'admin:constance_config_changelist' %}" class="changelink">Change</a></td>
+                    </tr>
+                    <tr>
+                        <th scope="row"><a href="{% url 'admin:fadderanmalan_job_changelist' %}">Jobs</a></th>
+                        <td><a href="{% url 'admin:fadderanmalan_job_add' %}" class="addlink">Add</a></td>
+                        <td><a href="{% url 'admin:fadderanmalan_job_changelist' %}" class="changelink">Change</a></td>
+                    </tr>
+                    <tr>
+                        <th scope="row"><a href="{% url 'admin:accounts_user_changelist' %}">Users</a></th>
+                        <td><a href="{% url 'admin:accounts_user_add' %}" class="addlink">Add</a></td>
+                        <td><a href="{% url 'admin:accounts_user_changelist' %}" class="changelink">Change</a></td>
+                    </tr>
+                    <tr>
+                        <th scope="row"><a href="{% url 'admin:fadderanmalan_type_changelist' %}">Types</a></th>
+                        <td><a href="{% url 'admin:fadderanmalan_type_add' %}" class="addlink">Add</a></td>
+                        <td><a href="{% url 'admin:fadderanmalan_type_changelist' %}" class="changelink">Change</a></td>
+                    </tr>
+                    <tr>
+                        <th scope="row"><a href="{% url 'admin:fadderanmalan_equipment_changelist' %}">Equipments</a>
+                        </th>
+                        <td><a href="{% url 'admin:fadderanmalan_equipment_add' %}" class="addlink">Add</a></td>
+                        <td><a href="{% url 'admin:fadderanmalan_equipment_changelist' %}" class="changelink">Change</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row"><a href="{% url 'admin:fadderanmalan_equipmentownership_changelist' %}">Equipment
+                            ownerships</a></th>
+                        <td><a href="{% url 'admin:fadderanmalan_equipmentownership_add' %}" class="addlink">Add</a>
+                        </td>
+                        <td><a href="{% url 'admin:fadderanmalan_equipmentownership_changelist' %}" class="changelink">Change</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="content-extra bottom"></div>
         </div>
-        <div class="content-extra bottom"></div>
-    </div>
-    {{ block.super }}
+        {{ block.super }}
+    {% endif %}
 {% endblock content %}
