Add field "end_date" and change existing "date" to "start_date". Add functionality for automatically changing "end_date" based on "start_date".

--- a/fadderanmalan/templates/components/job.html
+++ b/fadderanmalan/templates/components/job.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="job-body">
-        <strong>{{ job.date|date:"d M" }}</strong>
+        <strong>{{ job.start_date|date:"d M" }}</strong>
         {% if job.description %} - {{ job.short_desc }} {% endif %}
     </div>
 </a>
