--- a/fadderanmalan/templates/admin/fadderanmalan/job/change_form.html
+++ b/fadderanmalan/templates/admin/fadderanmalan/job/change_form.html
@@ -1,5 +1,21 @@
 {% extends 'admin/change_form.html' %}
 
+{% block content %}
+    <script>
+        const $ = django.jQuery;
+
+        $(function() {
+            const $startInput = $("#id_start_date");
+            const $endInput = $("#id_end_date");
+
+            $startInput.on("input change", function(e) {
+                $endInput.val(this.value);
+            });
+        });
+    </script>
+    {{ block.super }}
+{% endblock %}
+
 {% block submit_buttons_bottom %}
     <div class="submit-row">
         <input type="submit" value="Dequeue" name="_dequeue">
