--- a/templates/index.html
+++ b/templates/index.html
@@ -32,5 +32,9 @@
     <p>
         Hitta planerad funktionalitet, bakgrund och källkod i projektets
         <a href="https://github.com/RoosDaniel/Fadderjobb" target="_blank">GitHub-repo</a>.
+        Detta är första året fadderjobbssystemet används, så ha tålamod! Märker du eller någon av dina kompisar
+        något fel med hemsidan så kontakta mig omedelbums via
+        <a href="mailto:96danielroos@gmail.com" target="_blank">mail</a> eller
+        <a href="https://www.facebook.com/DanielRoooos" target="_blank">Facebook</a>.
     </p>
 {% endblock content %}
