Add some text to guide

--- a/fadderanmalan/templates/fadderanmalan/job_details.html
+++ b/fadderanmalan/templates/fadderanmalan/job_details.html
@@ -53,6 +53,10 @@
                 {{ job.only_visible_to.all|join:", " }}
             </p>
         {% endif %}
+        <p>
+            Glöm inte att du måste registrera dig på minst ett mat-/rigg- eller nykterfadderpass om inte
+            annat nämns i beskrivningen av jobbet.
+        </p>
         <h3>Beskrivning</h3>
         <p>
             {% if job.description %}
