--- a/templates/guide.html
+++ b/templates/guide.html
@@ -25,6 +25,12 @@
         kommer du ställas i en utgående kö och automatiskt bli avregistrerad när någon annan vill ha jobbet.
     </p>
 
+    <h4>Krav på pass</h4>
+    <p>
+        Som fadder behöver du registrera dig på minst ett mat-/rigg- eller nykterfadderpass om inte
+        annat nämns i beskrivningen av jobbet.
+    </p>
+
     <h2>Jobbyten</h2>
     <p>
         Att byta jobb mellan två faddrar har aldrig varit simplare! Systemet har tagit inspiration från trade-offers i
